--- a/index.html
+++ b/index.html
@@ -79,50 +79,64 @@
     
   </body>
   
-
-  <!-- Full-Screen Hero Section with Carousel -->
-  <section class="hero vh-100">
-    <div id="heroCarousel" class="carousel slide vh-100" data-bs-ride="carousel">
-      <div class="carousel-inner vh-100">
-        <!-- Slide 1 -->
-        <div class="carousel-item active">
-          <img src="https://media.istockphoto.com/id/2066510109/photo/victoria-and-alfred-v-and-a-waterfront-lit-up-during-a-colorful-sunset-with-table-mountain-in.webp?a=1&b=1&s=612x612&w=0&k=20&c=JTxf2GbhpAbOGuSVw1DDJfd2pu-4k0n43qyr2GZcSPg=" class="d-block w-100 vh-100" alt="Victoria and Alfred Waterfront">
-          <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
+<!-- Full-Screen Hero Section with Carousel -->
+<section class="hero vh-100">
+  <div id="heroCarousel" class="carousel slide vh-100" data-bs-ride="carousel">
+    <div class="carousel-inner vh-100">
+      <!-- Slide 1 -->
+      <div class="carousel-item active">
+        <img src="bo-kaap-street.png" class="d-block w-100 vh-100" alt="Bo-Kaap Neighborhood">
+        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
+          <div class="bg-overlay text-light p-4 rounded">
             <h1>Seamless Relocation for Digital Nomads</h1>
             <p>Relocate to Cape Town with ease and personalized support.</p>
             <a href="#contact" class="btn btn-primary btn-lg mt-3">Start Your Journey</a>
           </div>
         </div>
-        <!-- Slide 2 -->
-        <div class="carousel-item">
-          <img src="https://media.istockphoto.com/id/1086102004/photo/waterfront-in-cape-town-south-africa-with-table-mountain.jpg?s=612x612&w=0&k=20&c=qkMjrwT6FvajyAtYJnU5o77RVSq6SiXp7GSHILrlNno=" class="d-block w-100 vh-100" alt="Waterfront in Cape Town">
-          <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
+      </div>
+      <!-- Slide 2 -->
+      <div class="carousel-item">
+        <img src="Table_Mountain_Scenic_Waterfront.jpg" class="d-block w-100 vh-100" alt="Table Mountain Scenic Waterfront">
+        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
+          <div class="bg-overlay text-light p-4 rounded">
             <h1>Explore New Opportunities</h1>
             <p>Join the vibrant community of remote workers in Cape Town.</p>
             <a href="#contact" class="btn btn-primary btn-lg mt-3">Start Your Journey</a>
           </div>
         </div>
-        <!-- Slide 3 -->
-        <div class="carousel-item">
-          <img src="https://media.istockphoto.com/id/2177136146/photo/cape-town-sunset-over-camps-bay-beach-with-table-mountain-and-twelve-apostles-in-the.jpg?s=612x612&w=0&k=20&c=PTIgnJCj0tXlgysxHplRBYMy_Xc75o-ZlZdf__hbNSE=" class="d-block w-100 vh-100" alt="Camps Bay Beach">
-          <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
+      </div>
+      <!-- Slide 3 -->
+      <div class="carousel-item">
+        <img src="modern-living-room-cape-town.png" class="d-block w-100 vh-100" alt="Modern Living Room in Cape Town">
+        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
+          <div class="bg-overlay text-light p-4 rounded">
             <h1>Discover Cape Town</h1>
             <p>Enjoy breathtaking landscapes and vibrant culture.</p>
             <a href="#contact" class="btn btn-primary btn-lg mt-3">Start Your Journey</a>
           </div>
         </div>
       </div>
-      <!-- Carousel Controls -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
-  </section>
+    <!-- Carousel Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section>
+
+<!-- Custom Styles -->
+<style>
+  .bg-overlay {
+    background: rgba(0, 0, 0, 0.6); /* Semi-transparent black for contrast */
+    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8); /* Shadow to enhance text readability */
+    border-radius: 10px; /* Smooth corners for a modern look */
+  }
+</style>
 
 <!-- Services Section -->
 <section id="services" class="container my-5">
