--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
     <div class="carousel-inner vh-100">
       <!-- Slide 1 -->
       <div class="carousel-item active">
-        <img src="bo-kaap-street.png" class="d-block w-100 vh-100" alt="Bo-Kaap Neighborhood">
+        <img src="modern-living-room-cape-town.png" class="d-block w-100 vh-100" alt="Modern Living Room in Cape Town">
         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
           <div class="bg-overlay text-light p-4 rounded">
-            <h1>Seamless Relocation for Digital Nomads</h1>
-            <p>Relocate to Cape Town with ease and personalized support.</p>
+            <h1>Discover Cape Town</h1>
+            <p>Enjoy breathtaking landscapes and vibrant culture.</p>
             <a href="#contact" class="btn btn-primary btn-lg mt-3">Start Your Journey</a>
           </div>
         </div>
       </div>
       <!-- Slide 2 -->
       <div class="carousel-item">
-        <img src="Table_Mountain_Scenic_Waterfront.jpg" class="d-block w-100 vh-100" alt="Table Mountain Scenic Waterfront">
+        <img src="https://media.istockphoto.com/id/90201125/photo/living-room-in-modern-home.jpg?s=612x612&w=0&k=20&c=JJrRrB0VFkABF6iNaV-fel-WfeP1itE58LBRE14qzyY=" class="d-block w-100 vh-100" alt="Modern Living Room">
         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
           <div class="bg-overlay text-light p-4 rounded">
             <h1>Explore New Opportunities</h1>
@@ -107,11 +107,22 @@
       </div>
       <!-- Slide 3 -->
       <div class="carousel-item">
-        <img src="modern-living-room-cape-town.png" class="d-block w-100 vh-100" alt="Modern Living Room in Cape Town">
+        <img src="bo-kaap-street.png" class="d-block w-100 vh-100" alt="Bo-Kaap Neighborhood">
         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
           <div class="bg-overlay text-light p-4 rounded">
-            <h1>Discover Cape Town</h1>
-            <p>Enjoy breathtaking landscapes and vibrant culture.</p>
+            <h1>Seamless Relocation for Digital Nomads</h1>
+            <p>Relocate to Cape Town with ease and personalized support.</p>
+            <a href="#contact" class="btn btn-primary btn-lg mt-3">Start Your Journey</a>
+          </div>
+        </div>
+      </div>
+      <!-- Slide 4 -->
+      <div class="carousel-item">
+        <img src="virtual_home_showing.png" class="d-block w-100 vh-100" alt="Virtual Home Showing">
+        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
+          <div class="bg-overlay text-light p-4 rounded">
+            <h1>Experience Virtual Tours</h1>
+            <p>Explore properties remotely with our immersive virtual showings.</p>
             <a href="#contact" class="btn btn-primary btn-lg mt-3">Start Your Journey</a>
           </div>
         </div>
