--- a/pricing.html
+++ b/pricing.html
@@ -64,13 +64,13 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active" href="index.html#home">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html#services">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html#About Us">About Us</a></li>            
-                <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html">Contact</a></li>
-            </div>
+       <ul class="navbar-nav ms-auto">
+    <li class="nav-item"><a class="nav-link active" href="index.html#home" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="index.html#services" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Services</a></li>
+    <li class="nav-item"><a class="nav-link" href="index.html#about" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">About Us</a></li>
+    <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+    <li class="nav-item"><a class="nav-link" href="index.html#contact" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Contact</a></li>
+</ul>
         </div>
       </div>
     </nav>
