--- a/pricing.html
+++ b/pricing.html
@@ -50,32 +50,29 @@
     }
   </style>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <!-- Logo and Brand Name -->
-        <a class="navbar-brand d-flex align-items-center" href="#">
-          <img src="logo.png" alt="Virtual Nomad Logo" class="logo me-2">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <!-- Logo and Brand Name -->
+    <a class="navbar-brand d-flex align-items-center" href="/">
+      <img src="logo.png" alt="Virtual Nomad Logo" class="logo me-2">
+      <span class="fw-bold text-uppercase">Virtual Nomad</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link active" href="/index.html#home">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/index.html#services">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="/index.html#about">About Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="/pricing.html">Pricing</a></li>
+        <li class="nav-item"><a class="nav-link" href="/index.html#contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-          <span class="fw-bold text-uppercase">Virtual Nomad</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-   <div class="collapse navbar-collapse" id="navbarNav">
-                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#About Us">About Us</a></li>            
-                    <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Contact</a></li>
-             </div>
-        </div>
-      </div>
-    </nav>
-    
 
- 
       <!-- Carousel Controls -->
       <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
