--- a/index.html
+++ b/index.html
@@ -8,8 +8,29 @@
   <meta name="description" content="Relocate to Cape Town effortlessly with our expert relocation services tailored for digital nomads and remote workers. Virtual tours, legal support, and cultural orientation all in one place.">
   <meta name="keywords" content="relocation services, Cape Town, digital nomads, virtual tours, legal support, cultural orientation">
   <link rel="canonical" href="https://www.virtualnomad.com/">
-
+  <link rel="icon" type="image/png" href="favicon.png">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Virtual Nomad Cape Town",
+  "url": "https://www.virtualnomad.co.za/",
+  "address": {
+    "@type": "8002",
+    "streetAddress": "36 bree Cape Town Street",
+    "addressLocality": "Cape Town",
+    "addressCountry": "ZA"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+27 84 729 0664",
+    "contactType": "customer service"
+  }
+}
+</script>
+
+  
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -21,6 +42,7 @@
 
   <!-- Bootstrap CSS (via CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
@@ -41,7 +63,6 @@
       emailjs.init("bDD9Bs-d_KntBXRt_"); // Replace with your actual Public Key
     })();
   </script>
-<head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     /* Style for the logo */
@@ -50,7 +71,6 @@
       height: auto; /* Maintain aspect ratio */
     }
   </style>
-</head>
 
   <body>
     <!-- Navigation Bar -->
