--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     "telephone": "+27 84 729 0664",
     "contactType": "customer service"
   }
+  "logo": "https://www.virtualnomad.co.za/logo.png"
 }
 </script>
 
