--- a/pricing.html
+++ b/pricing.html
@@ -192,7 +192,7 @@
       <div class="col-md-6">
         <div class="p-3 border rounded">
           <h5>Contact Details</h5>
-          <p><strong>Email:</strong> <a href="mailto:bookings@virtualnomad.com">bookings@virtualnomad.com</a></p>
+          <p><strong>Email:</strong> <a href="mailto:info@virtualnomad.co.za">info@virtualnomad.co.za</a></p>
           <p><strong>WhatsApp:</strong> <a href="https://wa.me/27815587973" target="_blank">+27 81 558 7973</a></p>
           <p><strong>Call:</strong> <a href="tel:+27847290664">+27 84 729 0664</a></p>
           <h5>Follow Us</h5>
