--- a/index.html
+++ b/index.html
@@ -244,168 +244,172 @@
     </div>
   </div>
 </section>
-
-<!-- Contact Section -->
-<section id="contact" class="container mt-5">
-  <h2 class="text-center mb-4">Contact Us</h2>
-  <div class="row">
-    <!-- Contact Form Column -->
-    <div class="col-md-6">
-      <form id="contact-form">
-        <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" required>
-        </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" required>
-        </div>
-        <div class="mb-3">
-          <label for="message" class="form-label">Message</label>
-          <textarea class="form-control" id="message" rows="3" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary w-100">Send Message</button>
-      </form>
-    </div>
-    <!-- Contact Details Column -->
-    <div class="col-md-6">
-      <div class="p-3 border rounded">
-        <h5>Contact Details</h5>
-        <p><strong>Email:</strong> <a href="mailto:info@virtualnomad.com">info@virtualnomad.co.za</a></p>
-        <p><strong>WhatsApp:</strong> <a href="https://wa.me/27815587973" target="_blank">+27 81 558 7973</a></p>
-        <p><strong>Call:</strong> <a href="tel:+27847290664">+27 84 729 0664</a></p>
-        <h5>Follow Us</h5>
-        <p>
-          <a href="https://facebook.com" target="_blank" class="me-2 text-primary">
-            <i class="fab fa-facebook fa-lg"></i>
-          </a>
-          <a href="https://twitter.com" target="_blank" class="me-2 text-info">
-            <i class="fab fa-x-twitter fa-lg"></i>
-          </a>
-          <a href="https://instagram.com" target="_blank" class="text-danger">
-            <i class="fab fa-instagram fa-lg"></i>
-          </a>
-        </p>
-      </div>
-      <!-- Map Section (Smaller Map) -->
-      <div class="mt-4">
-        <h5>Our Location</h5>
-        <div class="ratio ratio-4x3">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3309.7924898836533!2d18.41812317629829!3d-33.928992080652726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc67650d104d19%3A0x4d0e33b4ad9fca30!2sCape%20Town%2C%20South%20Africa!5e0!3m2!1sen!2sza!4v1632994832756!5m2!1sen!2sza" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
+  <!-- CONTACT -->
+  <section id="contact" class="container mt-5">
+    <h2 class="text-center mb-4">Contact Us</h2>
 
-<!-- Testimonials Section -->
-<section id="testimonials" class="bg-light py-5">
-  <div class="container">
-    <h2 class="text-center mb-4">What Our Clients Say</h2>
     <div class="row">
-      <!-- Testimonial 1 -->
-      <div class="col-md-4 mb-4">
-        <div class="card border-light shadow-sm">
-          <div class="card-body">
-            <div class="d-flex align-items-center mb-3">
-              <!-- Google "G" Icon and User Initials -->
-              <div class="me-3">
-                <img src="https://cdn.trustindex.io/assets/platform/Google/icon.svg" alt="Google" style="width: 40px; height: 40px;">
-              </div>
-              <div>
-                <h5 class="mb-0">Emily Roberts</h5>
-                <small>2024-02-14</small>
-              </div>
-            </div>
-            <p class="mb-3">"Moving to Cape Town was a breeze thanks to their professional relocation services! Highly recommended for anyone considering a move to the city."</p>
-            <!-- 5-star Rating -->
-            <div class="stars">
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-            </div>
+
+      <div class="col-md-6 mb-4">
+        <form id="contact-form">
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="message" class="form-label">Message</label>
+            <textarea class="form-control" id="message" name="message" rows="3" required></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-primary w-100">Send Message</button>
+        </form>
+      </div>
+
+      <div class="col-md-6">
+        <div class="p-3 border rounded">
+          <h5>Contact Details</h5>
+          <p><strong>Email:</strong> <a href="mailto:info@virtualnomad.co.za">info@virtualnomad.co.za</a></p>
+          <p><strong>WhatsApp:</strong> <a href="https://wa.me/27815587973" target="_blank">+27 81 558 7973</a></p>
+          <p><strong>Call:</strong> <a href="tel:+27847290664">+27 84 729 0664</a></p>
+
+          <h5>Follow Us</h5>
+          <p>
+            <a href="https://facebook.com" target="_blank" class="me-2 text-primary">
+              <i class="fab fa-facebook fa-lg"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank" class="me-2 text-info">
+              <i class="fab fa-x-twitter fa-lg"></i>
+            </a>
+            <a href="https://instagram.com" target="_blank" class="text-danger">
+              <i class="fab fa-instagram fa-lg"></i>
+            </a>
+          </p>
+        </div>
+
+        <div class="mt-4">
+          <h5>Our Location</h5>
+          <div class="ratio ratio-4x3">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3309.7924898836533!2d18.41812317629829!3d-33.928992080652726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc67650d104d19%3A0x4d0e33b4ad9fca30!2sCape%20Town%2C%20South%20Africa!5e0!3m2!1sen!2sza!4v1632994832756!5m2!1sen!2sza"
+              loading="lazy"
+              allowfullscreen>
+            </iframe>
           </div>
         </div>
       </div>
-      <!-- Testimonial 2 -->
-      <div class="col-md-4 mb-4">
-        <div class="card border-light shadow-sm">
-          <div class="card-body">
-            <div class="d-flex align-items-center mb-3">
-              <!-- Google "G" Icon and User Initials -->
-              <div class="me-3">
-                <img src="https://cdn.trustindex.io/assets/platform/Google/icon.svg" alt="Google" style="width: 40px; height: 40px;">
-              </div>
-              <div>
-                <h5 class="mb-0">John Walker</h5>
-                <small>2023-12-30</small>
-              </div>
-            </div>
-            <p class="mb-3">"The relocation process was made so simple and stress-free. They took care of everything, from housing to orientation. A must-use service for expats."</p>
-            <!-- 5-star Rating -->
-            <div class="stars">
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Testimonial 3 -->
-      <div class="col-md-4 mb-4">
-        <div class="card border-light shadow-sm">
-          <div class="card-body">
-            <div class="d-flex align-items-center mb-3">
-              <!-- Google "G" Icon and User Initials -->
-              <div class="me-3">
-                <img src="https://cdn.trustindex.io/assets/platform/Google/icon.svg" alt="Google" style="width: 40px; height: 40px;">
-              </div>
-              <div>
-                <h5 class="mb-0">Sarah Jones</h5>
-                <small>2023-11-22</small>
-              </div>
-            </div>
-            <p class="mb-3">"Fantastic experience! They made my transition to Cape Town seamless, with great advice and support throughout the process."</p>
-            <!-- 5-star Rating -->
-            <div class="stars">
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-              <span class="text-warning">&#9733;</span>
-            </div>
-          </div>
-        </div>
-      </div>
+
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- Footer Section -->
-<footer class="bg-dark text-white py-4">
-  <div class="container">
-    <div class="row">
-      <!-- Newsletter Signup Section -->
+  <!-- TESTIMONIALS -->
+  <section id="testimonials" class="bg-light py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">What Our Clients Say</h2>
+
       <div class="row">
-        <div class="col-12 text-center mt-4">
-          <h5>Stay Updated!</h5>
-          <p>Sign up for our newsletter and get the latest relocation tips and special offers.</p>
-          <form action="#" method="post" class="d-flex justify-content-center">
-            <input type="email" class="form-control w-50" placeholder="Enter your email" required>
-            <button type="submit" class="btn btn-primary ms-2">Subscribe</button>
-          </form>
+
+        <div class="col-md-4 mb-4">
+          <div class="card border-light shadow-sm h-100">
+            <div class="card-body">
+              <div class="d-flex align-items-center mb-3">
+                <img src="https://cdn.trustindex.io/assets/platform/Google/icon.svg" alt="Google" style="width:40px;height:40px;" class="me-3">
+                <div>
+                  <h5 class="mb-0">Emily Roberts</h5>
+                  <small>2024-02-14</small>
+                </div>
+              </div>
+              <p>"Moving to Cape Town was a breeze thanks to their professional relocation services! Highly recommended for anyone considering a move to the city."</p>
+              <div class="text-warning">★★★★★</div>
+            </div>
+          </div>
         </div>
-      </div>
-      <!-- Copyright Section -->
-      <div class="row mt-4">
-        <div class="col-12 text-center">
-          <p>&copy; 2025 Virtual Nomad Relocation Service. All Rights Reserved.</p>
+
+        <div class="col-md-4 mb-4">
+          <div class="card border-light shadow-sm h-100">
+            <div class="card-body">
+              <div class="d-flex align-items-center mb-3">
+                <img src="https://cdn.trustindex.io/assets/platform/Google/icon.svg" alt="Google" style="width:40px;height:40px;" class="me-3">
+                <div>
+                  <h5 class="mb-0">John Walker</h5>
+                  <small>2023-12-30</small>
+                </div>
+              </div>
+              <p>"The relocation process was made so simple and stress-free. They took care of everything, from housing to orientation."</p>
+              <div class="text-warning">★★★★★</div>
+            </div>
+          </div>
         </div>
+
+        <div class="col-md-4 mb-4">
+          <div class="card border-light shadow-sm h-100">
+            <div class="card-body">
+              <div class="d-flex align-items-center mb-3">
+                <img src="https://cdn.trustindex.io/assets/platform/Google/icon.svg" alt="Google" style="width:40px;height:40px;" class="me-3">
+                <div>
+                  <h5 class="mb-0">Sarah Jones</h5>
+                  <small>2023-11-22</small>
+                </div>
+              </div>
+              <p>"Fantastic experience! They made my transition to Cape Town seamless, with great advice and support throughout the process."</p>
+              <div class="text-warning">★★★★★</div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
-  </div>
-</footer>
+  </section>
+
+  <!-- SCRIPTS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    (function () {
+      emailjs.init("pLWCkusN34A8Sb8S9");
+    })();
+
+    document.addEventListener("DOMContentLoaded", function () {
+      const form = document.getElementById("contact-form");
+      if (!form) return;
+
+      form.addEventListener("submit", function (event) {
+        event.preventDefault();
+
+        emailjs.sendForm("service_ejvwqzl", "template_c96yqan", this).then(
+          function () {
+            alert("Message Sent Successfully!");
+            form.reset();
+          },
+          function (error) {
+            alert("Failed to send message. Try again! Error: " + JSON.stringify(error));
+          }
+        );
+      });
+    });
+  </script>
+
+  <!-- FOOTER -->
+  <footer class="bg-dark text-white py-4">
+    <div class="container text-center">
+      <h5>Stay Updated!</h5>
+      <p>Sign up for our newsletter and get the latest relocation tips and special offers.</p>
+
+      <form class="d-flex justify-content-center mb-3">
+        <input type="email" class="form-control w-50" placeholder="Enter your email" required>
+        <button type="submit" class="btn btn-primary ms-2">Subscribe</button>
+      </form>
+
+      <p class="mb-0">&copy; 2025 Virtual Nomad Relocation Service. All Rights Reserved.</p>
+    </div>
+  </footer>
+
+</body>
+</html>
+
