--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </div>
 
       <div class="carousel-item">
-        <img src="https://media.istockphoto.com/id/90201125/photo/living-room-in-modern-home.jpg"
+        <img src="https://media.istockphoto.com/id/90201125/photo/modern-living-room-cape-town.png"
           class="d-block w-100 vh-100"
           alt="Modern living room suitable for relocation accommodation in Cape Town">
         <div class="carousel-caption d-flex justify-content-center align-items-center">
