--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="canonical" href="https://www.virtualnomad.co.za/">
   <link rel="icon" type="image/png" href="logo.png">
 
+
   <!-- Open Graph -->
   <meta property="og:title" content="Virtual Nomad | Relocation & Virtual Property Tours in Cape Town">
   <meta property="og:description" content="Relocate to Cape Town with virtual property tours, transfers, city tours and cultural orientation services.">
@@ -151,7 +152,7 @@
       </div>
 
       <div class="carousel-item">
-        <img src="https://media.istockphoto.com/id/90201125/photo/modern-living-room-cape-town.png"
+        <img src="https://media.istockphoto.com/id/90201125/photo/living-room-in-modern-home.jpg"
           class="d-block w-100 vh-100"
           alt="Modern living room suitable for relocation accommodation in Cape Town">
         <div class="carousel-caption d-flex justify-content-center align-items-center">
@@ -199,23 +200,29 @@
     <!-- Virtual Property Tours -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="https://media.istockphoto.com/id/1318255374/photo/virtual-guided-real-estate-house-tour.jpg?s=612x612&w=0&k=20&c=_Aqe47OsBPdAyPMKItHsHn9snCYGn6SCWIkOe130zYI=" class="card-img-top" alt="Virtual Property Tours">
+        <img src="https://media.istockphoto.com/id/1318255374/photo/virtual-guided-real-estate-house-tour.jpg?s=612x612&w=0&k=20&c=_Aqe47OsBPdAyPMKItHsHn9snCYGn6SCWIkOe130zYI="
+             class="card-img-top"
+             alt="Virtual property tours in Cape Town for apartments and houses">
         <div class="card-body">
           <h5 class="card-title">Virtual Property Tours</h5>
-          <p class="card-text">Explore homes with immersive 360-degree virtual tours.</p>
+          <p class="card-text">
+            Explore apartments and houses for rent or purchase through immersive 360-degree virtual property tours in Cape Town — all from anywhere in the world.
+          </p>
           <a href="virtualtours.html" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     </div>
 
-    <!-- Legal & Logistical Support -->
+    <!-- Airport Transfers & City Tours -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="https://media.istockphoto.com/id/1783635446/photo/visa-application-form.webp?a=1&b=1&s=612x612&w=0&k=20&c=IHi7bOuRouVMOjWyRe2CArjiI8TEE2Wjzleql99ebWU=" class="card-img-top" alt="Visa Application Form">
+        <img src="airport-transfers-city-tours-cape-town.jpg" class="card-img-top" alt="Airport transfers and city tours in Cape Town">
         <div class="card-body">
-          <h5 class="card-title">Legal & Logistical Support</h5>
-          <p class="card-text">We assist with visa applications, insurance, and more.</p>
-          <a href="legalandsupport.html" class="btn btn-primary">Learn More</a>
+          <h5 class="card-title">Airport Transfers & City Tours</h5>
+          <p class="card-text">
+            Reliable airport pickups and guided city tours to help you explore Cape Town comfortably and safely.
+          </p>
+          <a href="airport-transfers.html" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     </div>
@@ -223,10 +230,14 @@
     <!-- Cultural Orientation -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="https://media.istockphoto.com/id/2094337676/photo/diverse-team-working-together-in-modern-co-working-space.webp?a=1&b=1&s=612x612&w=0&k=20&c=FbH7i1I3oCXoRfZKFvGj3jMXnsljD8mPmDmvY4IxQuA=" class="card-img-top" alt="Co-working Space">
+        <img src="https://media.istockphoto.com/id/2094337676/photo/diverse-team-working-together-in-modern-co-working-space.webp?a=1&b=1&s=612x612&w=0&k=20&c=FbH7i1I3oCXoRfZKFvGj3jMXnsljD8mPmDmvY4IxQuA="
+             class="card-img-top"
+             alt="Cultural orientation services for expats relocating to Cape Town">
         <div class="card-body">
           <h5 class="card-title">Cultural Orientation</h5>
-          <p class="card-text">Get familiar with Cape Town’s culture and customs.</p>
+          <p class="card-text">
+            Get familiar with Cape Town’s culture, neighbourhoods, lifestyle, and local customs so you can settle in confidently and feel at home from day one.
+          </p>
           <a href="culturalorientation.html" class="btn btn-primary">Learn More</a>
         </div>
       </div>
